--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/portfolio-low-resolution-logo-white-on-black-background.png"
+        <img src="portfolio-low-resolution-logo-white-on-black-background.png"
         class="logo">
 
         <nav class="navbar">
@@ -32,7 +32,7 @@
 
     <main>
         <div class="hero">
-            <img src="/wallpaperflare.com_wallpaper (1).jpg" class="background">
+            <img src="wallpaperflare.com_wallpaper (1).jpg" class="background">
             <div class="content">
                 It is a...<br> <span>Responsive Navbar</span>
             </div>
